--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,17 +1,8 @@
 <view class="indexContainer">
   <!-- 轮播图 -->
   <swiper class="banner" indicator-active-color='#D43C33' indicator-dots>
-    <swiper-item class="bannerItem">
-      <image class="bannerImg" src="../../static/images/bj.jpg"></image>
-    </swiper-item>
-    <swiper-item class="bannerItem">
-      <image class="bannerImg" src="../../static/images/3.jpg"></image>
-    </swiper-item>
-    <swiper-item class="bannerItem">
-      <image class="bannerImg" src="../../static/images/1.jpg"></image>
-    </swiper-item>
-    <swiper-item class="bannerItem">
-      <image class="bannerImg" src="../../static/images/bj.jpg"></image>
+    <swiper-item class="bannerItem" wx:for="{{bannerList}}" wx:key="targetId">
+      <image class="bannerImg" src="{{item.pic}}"></image>
     </swiper-item>
   </swiper>
   <!-- 导航栏 -->
@@ -39,17 +30,32 @@
   </view>
   <!-- 推荐歌曲 -->
   <view class="recommend">
-    <!-- 头部 -->
-    <view class="header">
-      <view class="title"></view>
-      <view class="headerText">
-        <text class="textleft"></text>
-        <text class="textright"></text>
-      </view>
-    </view>
+    <Header title='推荐歌曲' content='为你精心推荐'></Header>
     <!-- 滑动部分 -->
-    <view class="recommendScroll">
-    </view>
+    <scroll-view scroll-x enable-flex class="recommendScroll">
+      <view class="scrollItem" wx:for="{{recommendList}}" wx:key='id'>
+        <image class="itemImg" src="{{item.picUrl}}"></image>
+        <text class="itemText">{{item.name}}</text>
+      </view>
+    </scroll-view>
+  </view>
+  <!-- 排行榜 -->
+  <view class="rank">
+    <!-- 头部 -->
+    <Header title='排行榜' content='热歌风向标'></Header>
+    <!-- 轮播 -->
+    <swiper class="rankSwiper" previous-margin='40rpx' next-margin="30rpx">
+      <swiper-item class="swiperItem" wx:for="{{rankList}}" wx:key='id' wx:for-item='rank' wx:for-index='index'>
+        <view class="main">
+          <view class="mainTitle">{{rank.name}}</view>
+          <view class="mainItem" wx:for="{{rank.tracks}}" wx:key='id' wx:for-item="track" wx:for-index="index1">
+            <image class="songImg" src="{{track.al.picUrl}}"></image>
+            <text class="count">{{index1+1}}</text>
+            <text class="songName">{{track.name}}</text>
+          </view>
+        </view>
+      </swiper-item>
+    </swiper>
   </view>
 
 </view>
