--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,35 +1,95 @@
 /* pages/index/index.wxss */
-.indexContainer{
+.indexContainer {
   height: 100%;
 }
 /* 轮播 */
-.indexContainer .banner .bannerItem .bannerImg{
+.indexContainer .banner .bannerItem .bannerImg {
   width: 100%;
   height: 300rpx;
 }
 /* 导肮 */
-.indexContainer .navList{
+.indexContainer .navList {
   display: flex;
   justify-content: space-around;
 }
-.indexContainer .navList .navItem{
+.indexContainer .navList .navItem {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.indexContainer .navList .navItem .iconfont{
+.indexContainer .navList .navItem .iconfont {
   width: 100rpx;
   height: 100rpx;
   border-radius: 50%;
-  background-color: #D43C33;
+  background-color: #d43c33;
   text-align: center;
   line-height: 100rpx;
   font-size: 40rpx;
-  color:white;
-  margin:20rpx 0;
+  color: white;
+  margin: 20rpx 0;
 }
-.indexContainer .navList .navItem .navText{
+.indexContainer .navList .navItem .navText {
   font-size: 26rpx;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-weight: 400;
+}
+.indexContainer .recommend {
+  padding: 20rpx;
+}
+
+
+/* 滑动部分 */
+.indexContainer .recommend .recommendScroll {
+  height: 300rpx;
+  display: flex;
+}
+.indexContainer .recommend .recommendScroll .scrollItem {
+  width: 200rpx;
+  height: 200rpx;
+  margin-right: 20rpx;
+}
+.indexContainer .recommend .recommendScroll .scrollItem .itemImg {
+  width: 200rpx;
+  height: 200rpx;
+  border-radius: 10%;
+}
+.indexContainer .recommend .recommendScroll .scrollItem .itemText {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+/* 排行榜 */
+.indexContainer .rank {
+  padding: 20rpx;
+}
+.indexContainer .rank .rankSwiper {
+  height: 400rpx;
+}
+.indexContainer .rank .rankSwiper .swiperItem {
+  height: 400rpx;
+}
+.indexContainer .rank .main {
+  width: 90%;
+  height: 400rpx;
+  background-color: #cecece;
+  padding: 20rpx;
+}
+.indexContainer .rank .main .mainTitle {
+  font-size: 28rpx;
+  font-weight: 500;
+  margin-bottom: 10rpx;
+}
+.indexContainer .rank .main .mainItem {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10rpx;
+}
+.indexContainer .rank .main .songImg {
+  width: 100rpx;
+  height: 100rpx;
+}
+.indexContainer .rank .main .count {
+  margin: 0 50rpx;
 }
