--- a/pages/center/center.wxml
+++ b/pages/center/center.wxml
@@ -64,7 +64,7 @@
         <text class="title">最近播放</text>
         <!-- 最近播放记录 -->
         <scroll-view wx:if="{{userInfo.nickname}}" class="recordScroll" enable-flex scroll-x>
-          <view wx:for="{{recordList}}" class="item">
+          <view wx:for="{{recordList}}" wx:key='id' class="item">
             <image src="{{item.picUrl}}"></image>
           </view>
         </scroll-view>
