--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,55 +1,59 @@
-<view class="indexContainer">
-  <!-- 轮播图 -->
-  <swiper class="banner" indicator-active-color='#D43C33' indicator-dots>
-    <swiper-item class="bannerItem">
-      <image class="bannerImg" src="../../static/images/bj.jpg"></image>
-    </swiper-item>
-    <swiper-item class="bannerItem">
-      <image class="bannerImg" src="../../static/images/3.jpg"></image>
-    </swiper-item>
-    <swiper-item class="bannerItem">
-      <image class="bannerImg" src="../../static/images/1.jpg"></image>
-    </swiper-item>
-    <swiper-item class="bannerItem">
-      <image class="bannerImg" src="../../static/images/bj.jpg"></image>
+<view class="indexContent">
+  <!-- 轮播 -->
+  <swiper class="banner" indicator-dots indicator-active-color='#D43C33'>
+    <swiper-item class="bannerItem" wx:for="{{bannerList}}" wx:key="bannerId">
+      <image src="{{item.pic}}" class="bannerImg"></image>
     </swiper-item>
   </swiper>
-  <!-- 导航栏 -->
-  <view class="navList">
+  <!-- 导肮 -->
+  <view class="navContainer">
     <view class="navItem">
-      <text class="iconfont .icon-meirituijian"></text>
+      <text class="iconfont  .icon-meirituijian"></text>
       <text class="navText">每日推荐</text>
     </view>
     <view class="navItem">
-      <text class="iconfont icon-gedan"></text>
-      <text class="navText ">歌单</text>
+      <text class="iconfont .icon-gedan"></text>
+      <text class="navText">歌单</text>
     </view>
     <view class="navItem">
-      <text class="iconfont icon-paihangbang"></text>
+      <text class="iconfont .icon-paihangbang"></text>
       <text class="navText">排行榜</text>
     </view>
     <view class="navItem">
-      <text class="iconfont icon-diantai"></text>
+      <text class="iconfont .icon-diantai"></text>
       <text class="navText">电台</text>
     </view>
     <view class="navItem">
-      <text class="iconfont icon-zhiboguankanliangbofangsheyingshexiangjixianxing"></text>
+      <text class="iconfont .icon-zhibobofangshexiangjitianxianxianxing"></text>
       <text class="navText">直播</text>
     </view>
   </view>
   <!-- 推荐歌曲 -->
-  <view class="recommend">
-    <!-- 头部 -->
-    <view class="header">
-      <view class="title"></view>
-      <view class="headerText">
-        <text class="textleft"></text>
-        <text class="textright"></text>
+  <view class="recomment">
+    <Header title='推荐歌曲' content='为您精心推荐'></Header>
+    <!-- 滚动内容 -->
+    <scroll-view class="scroll" enable-flex scroll-x>
+      <view class="scrollItem" wx:for="{{recommentList}}" wx:key='id'>
+        <image src="{{item.picUrl}}" class="scrollImg"></image>
+        <text class="scrollText">{{item.name}}</text>
       </view>
-    </view>
-    <!-- 滑动部分 -->
-    <view class="recommendScroll">
-    </view>
+    </scroll-view>
   </view>
-
+  <!-- 排行榜 -->
+  <view class="rankContainer">
+    <Header title='排行榜' content='热歌风向标'></Header>
+    <!-- 轮播 -->
+    <swiper class="rankSwiper">
+      <swiper-item class="swiperItem" wx:for="{{rankList}}" wx:key='id' wx:for-item='rank' wx:for-index="index1">
+        <view class="main">
+          <text class="mainTitle">{{rank.name}}</text>
+          <view class="mainItem" wx:for="{{rank.tracks}}" wx:for-item="rankItem" wx:for-index="index2" wx:key='id'>
+            <image class="mainImg" src="{{rankItem.al.picUrl}}"></image>
+            <text class="count">{{index2+1}}</text>
+            <text class="songName">{{rankItem.al.name}}</text>
+          </view>
+        </view>
+      </swiper-item>
+    </swiper>
+  </view>
 </view>
