--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,35 +1,109 @@
-/* pages/index/index.wxss */
-.indexContainer{
+.indexContent {
   height: 100%;
 }
-/* 轮播 */
-.indexContainer .banner .bannerItem .bannerImg{
+
+/* .indexContent .banner {
   width: 100%;
   height: 300rpx;
 }
-/* 导肮 */
-.indexContainer .navList{
+.indexContent .banner .bannerItem {
+  width: 100%;
+  height: 300rpx;
+} */
+.indexContent .banner .bannerItem .bannerImg {
+  width: 100%;
+  height: 300rpx;
+}
+
+.navContainer {
   display: flex;
   justify-content: space-around;
+  margin-top: 20rpx;
 }
-.indexContainer .navList .navItem{
+
+.navContainer .navItem {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.indexContainer .navList .navItem .iconfont{
+.navContainer .navItem .iconfont {
   width: 100rpx;
   height: 100rpx;
-  border-radius: 50%;
-  background-color: #D43C33;
   text-align: center;
   line-height: 100rpx;
-  font-size: 40rpx;
-  color:white;
-  margin:20rpx 0;
+  background-color: #d43c33;
+  border-radius: 50%;
+  margin-bottom: 20rpx;
+  color: white;
+  font-size: 50rpx;
 }
-.indexContainer .navList .navItem .navText{
+.navContainer .navItem .navText {
   font-size: 26rpx;
-  font-family: 'Courier New', Courier, monospace;
-  font-weight: 400;
+}
+/* 推荐歌曲 */
+.recomment {
+  padding: 20rpx;
+}
+
+/* 滚动内容 */
+.recomment .scroll {
+  display: flex;
+  height: 300rpx;
+}
+.recomment .scroll .scrollItem {
+  display: flex;
+  flex-direction: column;
+  width: 200rpx;
+  margin-right: 20rpx;
+}
+.recomment .scroll .scrollItem .scrollImg {
+  width: 200rpx;
+  height: 200rpx;
+  border-radius: 10%;
+}
+.recomment .scroll .scrollItem .scrollText {
+  font-size: 28rpx;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  word-wrap: break-word;
+}
+
+/* 排行榜 */
+.rankContainer {
+  padding: 20rpx;
+}
+.rankContainer .rankSwiper {
+  height: 400rpx;
+  width: 100%;
+}
+.rankContainer .rankSwiper .swiperItem {
+  width: 100%;
+  height: 400rpx;
+}
+.rankContainer .rankSwiper .swiperItem .main {
+  width: 90%;
+  height: 400rpx;
+  background-color: #e0e0e0;
+  padding: 0 20rpx;
+}
+
+.rankSwiper .swiperItem .main .mainTitle {
+  font-size: 28rpx;
+  line-height: 70rpx;
+}
+
+.rankSwiper .swiperItem .main .mainItem {
+  display: flex;
+  margin-bottom: 10rpx;
+  align-items: center;
+}
+.rankSwiper .swiperItem .main .mainItem .mainImg {
+  width: 100rpx;
+  height: 100rpx;
+}
+.rankSwiper .swiperItem .main .mainItem .count {
+  width: 100rpx;
+  text-align: center;
 }
